2026-01-10 JTC: Fixes a responsive issue in portrait view on tablets.

--- a/public/css/dapp-main.css
+++ b/public/css/dapp-main.css
@@ -1249,6 +1249,31 @@ h1, h2 {
         width: 90%;
     }
 
+    .scroller {
+        width: 100%;
+        padding: 20px 15px 15px;
+    }
+
+    .account-btn {
+        bottom: 5%;
+    }
+
+    .account-btn .balances {
+        margin: 0px auto 0 auto;
+    }
+
+    .current-wallet-popup.showing {
+        transform: scale(1, 1) translate(-25%, 0);
+    }
+
+    .current-wallet-popup:before {
+        margin-left: 57px;
+    }
+
+    .current-wallet-popup:after {
+        margin-left: 60px;
+    }
+
     /*.dapp-buttons {*/
     /*    margin: 15px;*/
     /*    box-sizing: border-box;*/
@@ -1265,10 +1290,6 @@ h1, h2 {
         max-height: 80px;
         width: 90%;
         margin: 10px;
-    }
-
-    .current-wallet {
-        bottom: -50%;
     }
 
     .dummytext {
